--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,12 @@ cache:
 before_cache:
   - rm -rf $HOME/.m2/repository/com/autentia/traviscodacy
 
+before_install:
+  - sudo apt-get install jq
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar https://github.com/codacy/codacy-coverage-reporter/releases/download/4.0.5/codacy-coverage-reporter-4.0.5-assembly.jar
+
+after_success:
+  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r target/jacoco/jacoco.xml
+
 jdk:
   - oraclejdk8
